diplom/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diplom-app
  namespace: diplom
spec:
  selector:
    app: diplom-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
