diplom/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplom-app
  namespace: diplom
spec:
  ingressClassName: nginx
  rules:
    # Основной домен, за ним обратный прокси с сертификатом
    - host: diplom.irbis36.vip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diplom-app
                port:
                  number: 80
    # Правило без хоста оставлено, чтобы приложение открывалось и по адресу ноды
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diplom-app
                port:
                  number: 80
